--- a/.github/workflows/draft.yml
+++ b/.github/workflows/draft.yml
@@ -8,7 +8,8 @@ on:
   # pull_request event is required only for autolabeler
   pull_request:
     # Only following types are handled by the action, but one can default to all as well
-    types: [opened, reopened, synchronize]
+    branches:
+      - master
 
 jobs:
   update_release_draft:
